# MySourceCpp

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp
mylibs/: .cproject  .project  CMakeLists.txt  mathCalc.cpp  mathCalc.h
